# mathm-dd1338

./: Makefile  README.md  addingwords.cc  blog-post-rating.hs  gamerank.c  imperfectgps.c  interval-cover-test.cc  interval-cover.h  kattis-open-addingwords.cc  kattis-open-gamerank.c  kattis-open-quantum.cc  quantum.cc  tsp.cc  union_find_bad.rs  union_find_good.rs
algorithms/: Cargo.toml
algorithms/algorithms/src/: binary_search.rs  fenwick.rs  lib.rs  longest_increasing_subsequence.rs  quicksort.rs  segtree.rs
algorithms/kattis-open-blowingcandles/: Cargo.toml
algorithms/kattis-open-blowingcandles/src/: main.rs
algorithms/kattis-open-convexhull/: Cargo.toml
algorithms/kattis-open-convexhull/src/: main.rs
algorithms/kattis-open-fenwick/: Cargo.toml
algorithms/kattis-open-fenwick/src/: main.rs
algorithms/kattis-open-hashing/: Cargo.toml  input.py
algorithms/kattis-open-hashing/src/: main.rs
algorithms/kattis-open-longincsubseq/: Cargo.toml
algorithms/kattis-open-longincsubseq/src/: main.rs
algorithms/kattis-open-pointinpolygon/: Cargo.toml
algorithms/kattis-open-pointinpolygon/src/: main.rs
algorithms/kattis-open-stringmatching/: Cargo.toml
algorithms/kattis-open-stringmatching/src/: main.rs
algorithms/kattis-open-triangleornaments/: Cargo.toml
algorithms/kattis-open-triangleornaments/src/: main.rs
algorithms/kattis-open-ultraquicksort/: Cargo.toml
algorithms/kattis-open-ultraquicksort/src/: main.rs
algorithms/kattis-open-unionfind/: Cargo.toml
algorithms/kattis-open-unionfind/src/: main.rs
allocators/: build.zig
(+48 files in other folders)
