[workspace]

members = [
    "algorithms",
    "kattis-open-longincsubseq",
    "kattis-open-unionfind",
    "kattis-open-hashing",
    "kattis-open-fenwick",
    "kattis-open-ultraquicksort",
    "kattis-open-stringmatching",
    "kattis-open-blowingcandles",
    "kattis-open-pointinpolygon",
    "kattis-open-convexhull",
]
